fix date wrap

--- a/components/card/style/card.module.scss
+++ b/components/card/style/card.module.scss
@@ -6,7 +6,7 @@
   &:hover {
     transform: scale(1.01);
     cursor: pointer;
-    transition: all .3s ease-in;
+    transition: all 0.3s ease-in;
   }
 }
 @media only screen and (max-width: 768px) {
