--- a/src/container/content/style/content.module.scss
+++ b/src/container/content/style/content.module.scss
@@ -32,6 +32,7 @@
   & span {
     font-size: 13px;
     padding: 3% 0;
+    white-space: nowrap;
   }
   .projBody {
     height: 160px;
